# pgcrab

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  basic_md_template.md.j2  basic_myst_template.md.j2  devenv.nix  devenv.yaml  flake.lock.license  flake.nix
.config/: crumbtrail.toml
.github/workflows/: container-publish.yml  docker-publish.yml
.woodpecker/: main.yaml  pr.yaml  release.yaml  release.yaml.disabled
changelog.d/: 1yu72200.removal.md  3385u441.feature.md  395wvw82.misc.md  8y2vu219.fix.md
docs/: releasing.md
src/: config.rs  doc.rs  gather.rs  intermediate.rs  lib.rs  lint.rs  render.rs
src/doc/: combine.rs  convert.rs  gather_comments.rs  gather_database.rs  intermediate.rs  render.rs
src/lint/: schema.rs  sql.rs
src/lint/schema/: lint_donotdothis.rs  lint_pgcrab.rs  lint_pgindexhealth.rs  macros.rs
src/lint/schema/rules/: btree_index_on_array_column.sql  column_requires_quotation.sql  column_with_fixed_length_varchar.sql  column_with_money_type.sql  column_with_serial_type.sql  column_with_timestamp_type.sql  duplicate_foreign_keys.sql  duplicate_indexes.sql  foreign_key_with_unmatched_column_type.sql  foreign_key_without_index.sql  index_with_boolean.sql  index_with_redundant_where_clause.sql  indexes_with_timestamp_in_the_middle.sql  object_requires_quotation.sql  overlapping_foreign_keys.sql  overlapping_indexes.sql  possible_object_name_truncation.sql  table_without_primary_key.sql  table_without_replica_identity.sql
src/lint/sql/: gather_python.rs  gather_rust.rs  lint_donotdothis.rs
