[package]
name = "postgres_schema_documenter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

rust-version = "1.69"

[dependencies]
clap = { version = "4.2.1", features = ["derive", "env"] }
eyre = "0.6.8"
lazy_static = "1.4.0"
minijinja = "1.0.8"
postgres = "0.19.7"
regex = "1.10.2"
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
