# SPDX-FileCopyrightText: 2025 Olivier 'reivilibre'
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "pgcrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

rust-version = "1.69"

[dependencies]
clap = { version = "4.2.1", features = ["derive", "env"] }
eyre = "0.6.8"
fast-glob = "1.0.0"

minijinja = "1.0.8"
postgres = "0.19.7"
regex = "1.10.2"
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
toml_edit = { version = "0.23.4", features = ["serde"] }
itertools = "0.14.0"
maplit = "1.0.2"
strum = { version = "0.27.2", features = ["derive"] }
catppuccin = "2.5.1"
colored = "3.0.0"

# TODO disable default features
syn = { version = "2.0.104", features = ["parsing", "full", "visit"] }
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }

rustpython-parser = "0.4.0"
rustpython-ast = "0.4.0"

sqlparser = { version = "0.58.0", features = ["visitor"] }

walkdir = "2.5.0"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
